--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   "description": "",
   "devDependencies": {
     "browser-sync": "^2.27.10",
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-file-include": "^2.3.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-webp-html": "^1.0.2"
-  },
-  "dependencies": {
-
   }
 }
