--- a/package.json
+++ b/package.json
@@ -7,13 +7,28 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "not dead"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "babel-loader": "^8.2.5",
     "browser-sync": "^2.27.10",
+    "core-js": "^3.25.1",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-cssimport": "^7.0.0",
     "gulp-file-include": "^2.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-notify": "^4.0.0",
@@ -22,10 +37,13 @@
     "gulp-shorthand": "^1.1.0",
     "gulp-size": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
-    "gulp-webp-html": "^1.0.2"
+    "gulp-webp-html": "^1.0.2",
+    "webpack": "^5.74.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "gulp-sass": "^5.1.0",
+    "normalize.css": "^8.0.1",
     "sass": "^1.54.9"
   }
 }
