--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gulp-size": "^4.0.1",
     "gulp-webp": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
-    "gulp-webp-html": "^1.0.2",
+    "gulp-webp-in-html": "^1.0.1",
     "sass": "^1.54.9",
     "webpack": "^5.74.0",
     "webpack-stream": "^7.0.0"
